<resources>
    <string name="app_name">Task</string>
    <string name="txtHint">Please Write Your Info</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>

    <string name="LongText" translatable="false">LongText</string>
    <string name="Number" translatable="false">Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="please_write_name">Please write your name</string>
    <string name="please_write_age">Please write your age</string>
    <string name="please_write_job">Please write your job title</string>
    <string name="error">error</string>
    <string name="done">Ok</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="needLogout">Are you sure to logout?</string>
    <string name="no">No</string>
    <string name="displayAllUsers">Display all users</string>
</resources>